--- a/online-zoo/pages/sass/components/_donation.scss
+++ b/online-zoo/pages/sass/components/_donation.scss
@@ -69,7 +69,7 @@
     background: #404950;
     border-radius: 2px;
     padding: 0 12px;
-    z-index: 1;
+    z-index: 2;
     margin-top: 17px;
     &::before {
       content: "";
@@ -83,7 +83,10 @@
     }
   }
   input[type="range"]::-webkit-slider-runnable-track {
-    height: 2px;
+    height: 40px;
+    background-color: transparent;
+    z-index: 3;
+    cursor: pointer;
   }
   input[type="range"]::-webkit-slider-thumb {
     cursor: pointer;
@@ -91,7 +94,6 @@
     border: 2px solid #FE9013;
     outline: 2px solid #FE9013;
     outline-offset: -10.52px;
-    bottom: 19px;
     width: 40px;
     height: 40px;
     z-index: 10;
@@ -101,8 +103,10 @@
   }
   
   input[type="range"]::-moz-range-track {
-    height: 2px;
-    background: #72828E;
+    height: 40px;
+    background-color: transparent;
+    z-index: 3;
+    cursor: pointer;
   }
   input[type="range"]::-moz-range-thumb {
     cursor: pointer;
@@ -110,7 +114,6 @@
     border: 2px solid #FE9013;
     outline: 2px solid #FE9013;
     outline-offset: -10.52px;
-    bottom: 18px;
     width: 40px;
     height: 40px;
     z-index: 10;
@@ -131,10 +134,11 @@
 
 .slider-in-beetween-track__track {
   width: 10px;
-  height: 10px;
+  min-height: 10px;
   border-radius: 100%;
   display: inline-block;
   background: #FFEE2E;
+  z-index:1;
 }
 
 .donate-value__value {
